--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,37 +2,20 @@
 services:
   ssh-tunnel:
     build: .
+    ports:
+      - "${SSH_EXTERNAL_PORT:-2222}:22"          # SSH port
+      - "${HTTP_EXTERNAL_PORT:-8080}:80"         # HTTP port
+      - "${HTTPS_EXTERNAL_PORT:-8443}:443"       # HTTPS port
     environment:
-      - DOMAIN=tunnel-net
-      - ACME_EMAIL=test@example.com
-      - SSH_PORT=2222
-      - HTTP_PORT=8080
-      - HTTPS_PORT=8443
+      - DOMAIN=${DOMAIN:-localhost}
+      - ACME_EMAIL=admin@example.com
+      - SSH_PORT=22
+      - HTTP_PORT=80
+      - HTTPS_PORT=443
+      - HTTP_EXTERNAL_PORT=${HTTP_EXTERNAL_PORT:-8080}
+      - HTTPS_EXTERNAL_PORT=${HTTPS_EXTERNAL_PORT:-8443}
       - ACME_STAGING=true
+      - SSH_AUTHORIZED_KEYS=/data/authorized_keys
     volumes:
       - ./data:/data
-    networks:
-      - tunnel-net
-    healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "2222"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-
-  mock-server:
-    build:
-      context: .
-      dockerfile: Dockerfile.mock
-    environment:
-      - PORT=3000
-    networks:
-      - tunnel-net
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
-      interval: 5s
-      timeout: 3s
-      retries: 5
-
-networks:
-  tunnel-net:
-    driver: bridge
+    restart: unless-stopped
