--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,101 @@
 # Bohrer SSH Tunnel Server Configuration
 # Copy this file to .env and customize as needed
 
-# Domain Configuration
+# =====================================================
+# DOMAIN CONFIGURATION
+# =====================================================
+# Base domain for tunnel subdomains (e.g., subdomain.DOMAIN)
 DOMAIN=localhost
+
+# =====================================================
+# ACME / SSL CERTIFICATE CONFIGURATION  
+# =====================================================
+# Email address for Let's Encrypt certificate registration
+# Leave empty to disable ACME and use self-signed certificates
 ACME_EMAIL=admin@example.com
+
+# Use Let's Encrypt staging environment (true) or production (false)
+# SAFETY: Always defaults to staging=true to prevent rate limiting
+# IMPORTANT: Only set to false for production deployments with real domains
+# WARNING: Production has strict rate limits (5 failed attempts per hour)
 ACME_STAGING=true
 
-# Internal Ports (inside container) - Standard ports
+# Custom ACME directory URL (optional)
+# Use this for custom PKI/CA servers (e.g., internal Step CA, Smallstep)
+# Leave empty to use Let's Encrypt
+#ACME_DIRECTORY_URL=https://your-ca.example.com/acme/acme/directory
+
+# Force ACME even for local domains (when using custom ACME server)
+# Set to true when using custom PKI for local development
+ACME_FORCE_LOCAL=false
+
+# Certificate file paths (inside container)
+ACME_CERT_PATH=/data/certs/fullchain.pem
+ACME_KEY_PATH=/data/certs/key.pem
+
+# ACME HTTP-01 challenge directory (inside container)
+ACME_CHALLENGE_DIR=/data/acme-challenge
+
+# Certificate renewal threshold (days before expiry)
+ACME_RENEWAL_DAYS=30
+
+# =====================================================
+# INTERNAL PORTS (INSIDE CONTAINER)
+# =====================================================
+# These are standard ports inside the container - usually don't change
 SSH_PORT=22
 HTTP_PORT=80
 HTTPS_PORT=443
 
-# External Ports (Docker host)
+# =====================================================
+# EXTERNAL PORTS (DOCKER HOST MAPPING)
+# =====================================================
+# These ports are exposed on the Docker host
 SSH_EXTERNAL_PORT=2222
 HTTP_EXTERNAL_PORT=8080
 HTTPS_EXTERNAL_PORT=8443
 
-# SSH Authentication
+# =====================================================
+# SSH AUTHENTICATION
+# =====================================================
+# Path to SSH authorized keys file (inside container)
+# Mount your authorized_keys file to this path
 SSH_AUTHORIZED_KEYS=/data/authorized_keys
 
-# Production Examples (uncomment and modify):
-# DOMAIN=yourdomain.com
+# =====================================================
+# DEVELOPMENT CONFIGURATION
+# =====================================================
+# Quick development setup - uses self-signed certificates
+# DOMAIN=localhost
+# ACME_EMAIL=
+# SSH_EXTERNAL_PORT=2222
+# HTTP_EXTERNAL_PORT=8080
+# HTTPS_EXTERNAL_PORT=8443
+
+# =====================================================
+# PRODUCTION CONFIGURATION EXAMPLES
+# =====================================================
+# Production setup with Let's Encrypt certificates
+# IMPORTANT: Only use ACME_STAGING=false for real production with valid domains
+# DOMAIN=tunnel.yourdomain.com
 # ACME_EMAIL=admin@yourdomain.com
-# ACME_STAGING=false
+# ACME_STAGING=false                    # EXPLICIT production setting required
+# SSH_EXTERNAL_PORT=2222
 # HTTP_EXTERNAL_PORT=80
 # HTTPS_EXTERNAL_PORT=443
+
+# Custom PKI / Internal CA setup
+# DOMAIN=tunnel.company.local
+# ACME_EMAIL=admin@company.local
+# ACME_DIRECTORY_URL=https://ca.company.local/acme/acme/directory
+# ACME_FORCE_LOCAL=true
+# ACME_STAGING=false
+
+# =====================================================
+# NOTES
+# =====================================================
+# 1. For development: Use localhost domain with self-signed certs
+# 2. For production: Use real domain with Let's Encrypt
+# 3. For internal deployment: Use custom ACME_DIRECTORY_URL
+# 4. Always test with ACME_STAGING=true first
+# 5. DNS setup required: A record for DOMAIN and *.DOMAIN → server IP
