--- a/Dockerfile.mock
+++ b/Dockerfile.mock
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY test/mock-server.go ./
+COPY test/cmd/mock-server/mock-server.go ./
 
 RUN go build -o mock-server mock-server.go
 
