add documentation to env file, remove extra logging

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,10 @@ ACME_CHALLENGE_DIR=/data/acme-challenge
 # Certificate renewal threshold (days before expiry)
 ACME_RENEWAL_DAYS=30
 
+# Skip ACME entirely and use self-signed certificates
+# Set to true for development/testing without ACME
+SKIP_ACME=false
+
 # =====================================================
 # INTERNAL PORTS (INSIDE CONTAINER)
 # =====================================================
@@ -68,6 +72,7 @@ SSH_AUTHORIZED_KEYS=/data/authorized_keys
 # Quick development setup - uses self-signed certificates
 # DOMAIN=localhost
 # ACME_EMAIL=
+# SKIP_ACME=true
 # SSH_EXTERNAL_PORT=2222
 # HTTP_EXTERNAL_PORT=8080
 # HTTPS_EXTERNAL_PORT=8443
