introduce log levels

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,17 @@ ACME_RENEWAL_DAYS=30
 SKIP_ACME=false
 
 # =====================================================
+# LOGGING CONFIGURATION
+# =====================================================
+# Log level: DEBUG, INFO, WARN, ERROR, FATAL
+# DEBUG shows all messages including detailed debugging info
+# INFO shows normal operational messages (default)
+# WARN shows warnings and errors only
+# ERROR shows errors only
+# FATAL shows only fatal errors that cause exit
+LOG_LEVEL=INFO
+
+# =====================================================
 # INTERNAL PORTS (INSIDE CONTAINER)
 # =====================================================
 # These are standard ports inside the container - usually don't change
