add webui with authentication add user management

--- a/.env.example
+++ b/.env.example
@@ -78,6 +78,32 @@ HTTPS_EXTERNAL_PORT=8443
 SSH_AUTHORIZED_KEYS=/data/authorized_keys
 
 # =====================================================
+# USER STORAGE CONFIGURATION
+# =====================================================
+# User storage backend: "file" (persistent) or "memory" (temporary)
+# file: Stores users in JSON file with bcrypt password hashing
+# memory: Stores users in memory only (lost on restart)
+USER_STORAGE_TYPE=file
+
+# Path to user storage file (when USER_STORAGE_TYPE=file)
+# File stores username, bcrypt-hashed password, and timestamps
+# Automatically persisted in Docker volume at /data
+USER_STORAGE_PATH=/data/users.json
+
+# =====================================================
+# WEBUI AUTHENTICATION
+# =====================================================
+# WebUI admin username and password for Basic Authentication
+# Leave empty to auto-generate credentials (recommended for development)
+# Set explicit values for production deployments
+WEBUI_USERNAME=
+WEBUI_PASSWORD=
+
+# Example for production:
+# WEBUI_USERNAME=admin
+# WEBUI_PASSWORD=your-secure-password-here
+
+# =====================================================
 # DEVELOPMENT CONFIGURATION
 # =====================================================
 # Quick development setup - uses self-signed certificates
