test user creation in e2e test

--- a/Dockerfile.ssh-client
+++ b/Dockerfile.ssh-client
@@ -4,6 +4,7 @@ FROM alpine:latest
 # Install SSH client and tools
 RUN apk add --no-cache \
     openssh-client \
+    sshpass \
     bash \
     curl \
     netcat-openbsd \
