--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -9,6 +9,7 @@ services:
       - HTTP_PORT=80
       - HTTPS_PORT=443
       - LOG_LEVEL=DEBUG
+      - SSH_AUTHORIZED_KEYS=/data/authorized_keys
     volumes:
       - e2e_data:/data
       - ./test/test_authorized_keys:/data/authorized_keys:ro
