--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # Bohrer SSH Tunnel Server Configuration
 # Copy this file to .env and customize as needed
+# 
+# IMPORTANT: This server runs entirely in Docker containers
+# - All paths mentioned (e.g., /data) are INSIDE the container
+# - External ports map from Docker host to container internal ports
+# - Data is persisted using Docker named volumes
 
 # =====================================================
 # DOMAIN CONFIGURATION
@@ -55,20 +60,21 @@ SKIP_ACME=false
 LOG_LEVEL=INFO
 
 # =====================================================
-# INTERNAL PORTS (INSIDE CONTAINER)
+# PORT CONFIGURATION (DOCKER CONTAINER → HOST MAPPING)
 # =====================================================
-# These are standard ports inside the container - usually don't change
-SSH_PORT=22
-HTTP_PORT=80
-HTTPS_PORT=443
+# The server runs in Docker with this port mapping:
+# - Container internal ports (left side in docker-compose.yml)
+# - Host external ports (right side, what users connect to)
 
-# =====================================================
-# EXTERNAL PORTS (DOCKER HOST MAPPING)
-# =====================================================
-# These ports are exposed on the Docker host
-SSH_EXTERNAL_PORT=2222
-HTTP_EXTERNAL_PORT=8080
-HTTPS_EXTERNAL_PORT=8443
+# INTERNAL PORTS (INSIDE CONTAINER) - Standard ports, rarely need changing
+SSH_PORT=22        # Standard SSH port inside container
+HTTP_PORT=80       # Standard HTTP port inside container  
+HTTPS_PORT=443     # Standard HTTPS port inside container
+
+# EXTERNAL PORTS (DOCKER HOST) - What users actually connect to
+SSH_EXTERNAL_PORT=2222    # Maps to container's SSH_PORT
+HTTP_EXTERNAL_PORT=8080   # Maps to container's HTTP_PORT
+HTTPS_EXTERNAL_PORT=8443  # Maps to container's HTTPS_PORT
 
 # =====================================================
 # SSH AUTHENTICATION
@@ -141,3 +147,5 @@ WEBUI_PASSWORD=
 # 3. For internal deployment: Use custom ACME_DIRECTORY_URL
 # 4. Always test with ACME_STAGING=true first
 # 5. DNS setup required: A record for DOMAIN and *.DOMAIN → server IP
+# 6. Local development now requires Go 1.23+ (tests run natively)
+# 7. Docker is only required for e2e tests
