persist ssh host key condense readme change default http external ports to standard ports

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Bohrer SSH Tunnel Server Configuration
 # Copy this file to .env and customize as needed
-# 
+#
 # IMPORTANT: This server runs entirely in Docker containers
 # - All paths mentioned (e.g., /data) are INSIDE the container
 # - External ports map from Docker host to container internal ports
@@ -13,7 +13,7 @@
 DOMAIN=localhost
 
 # =====================================================
-# ACME / SSL CERTIFICATE CONFIGURATION  
+# ACME / SSL CERTIFICATE CONFIGURATION
 # =====================================================
 # Email address for Let's Encrypt certificate registration
 # Leave empty to disable ACME and use self-signed certificates
@@ -68,13 +68,13 @@ LOG_LEVEL=INFO
 
 # INTERNAL PORTS (INSIDE CONTAINER) - Standard ports, rarely need changing
 SSH_PORT=22        # Standard SSH port inside container
-HTTP_PORT=80       # Standard HTTP port inside container  
+HTTP_PORT=80       # Standard HTTP port inside container
 HTTPS_PORT=443     # Standard HTTPS port inside container
 
 # EXTERNAL PORTS (DOCKER HOST) - What users actually connect to
 SSH_EXTERNAL_PORT=2222    # Maps to container's SSH_PORT
-HTTP_EXTERNAL_PORT=8080   # Maps to container's HTTP_PORT
-HTTPS_EXTERNAL_PORT=8443  # Maps to container's HTTPS_PORT
+HTTP_EXTERNAL_PORT=80   # Maps to container's HTTP_PORT
+HTTPS_EXTERNAL_PORT=443  # Maps to container's HTTPS_PORT
 
 # =====================================================
 # SSH AUTHENTICATION
