fix permissions for security scanning don't build arm for now, it takes way to long

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,7 +23,8 @@ jobs:
 
     strategy:
       matrix:
-        platform: [linux/amd64, linux/arm64]
+        platform: [linux/amd64]
+        # platform: [linux/amd64, linux/arm64]
 
     steps:
     - name: Checkout code
