--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,8 +6,12 @@ on:
   pull_request:
     branches: [ "master" ]
 
-jobs:
+permissions:
+  contents: read
+  packages: write
+  security-events: write
 
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
