--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -2,11 +2,9 @@ name: Security Scan
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ main, develop ]
-  schedule:
-    - cron: '0 6 * * 1'  # Weekly on Monday at 6 AM UTC
+    branches: [ "master" ]
 
 permissions:
   contents: read
